https://www.pivotaltracker.com/story/show/95525912 - Major UI revision to portal based on discussions with Movember and in preparation for 4/1 launch.

--- a/portal/static/less/topnav.less
+++ b/portal/static/less/topnav.less
@@ -54,7 +54,7 @@
 }
 #tnthNavXs {
   display: none;
-  margin: 0 0 5px;
+  margin: 0;
   width: 100%;
   background-color: #83885F;
   background-image: url('../img/truenth_mtn_background3.jpg');
