--- a/portal/templates/client_add.html
+++ b/portal/templates/client_add.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block main %}
 {% from "flask_user/_macros.html" import render_field, back_btn %}
-<div class="well">
+<div class="portal-well well">
 
     {{ back_btn('clients','Client Applications') }}
 
