--- a/portal/templates/clients_list.html
+++ b/portal/templates/clients_list.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block main %}
 
-<div class="well">
+<div class="portal-well well">
 
     <h3 class="tnth-headline">Central Services OAuth 2.0 Client Applications</h3>
 
