--- a/portal/templates/flask_user/register.html
+++ b/portal/templates/flask_user/register.html
@@ -3,50 +3,69 @@
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_submit_field, back_btn %}
 
-<div class="well">
+<div class="well portal-well">
 
-    {{ back_btn(PORTAL,'Home') }}
+    <h3 class="tnth-headline">Register for TrueNTH</h3>
 
-    <h2>{%trans%}Register for TrueNTH{%endtrans%}</h2>
+    <div class="row">
+        <div class="col-md-5">
 
-    <form action="" method="POST" novalidate formnovalidate class="form" role="form">
-        {{ form.hidden_tag() }}
+            <p>Do you have a Google or Facebook account? You can register with either of those or create a TrueNTH username and password. <i class="fa fa-question-circle"></i> </p>
 
-        {# Username or Email #}
-        {% set field = form.username if user_manager.enable_username else form.email %}
-        <div class="form-group {% if field.errors %}has-error{% endif %}">
-            {# Label on left, "Already registered? Sign in." on right #}
-            <div class="row">
-                <div class="col-xs-6">
-                    <label for="{{ field.id }}" class="control-label">{{ field.label.text }}</label>
-                </div>
-                <div class="col-xs-6 text-right">
-                    {% if user_manager.enable_register %}
-                    <a href="{{ url_for('user.login') }}" tabindex='290'>
-                        {%trans%}Already registered? Sign in.{%endtrans%}</a>
-                    {% endif %}
-                </div>
-            </div>
-            {{ field(class_='form-control', tabindex=210) }}
-            {% if field.errors %}
-            {% for e in field.errors %}
-            <p class="help-block">{{ e }}</p>
-            {% endfor %}
-            {% endif %}
+            <p class="hidden-sm hidden-xs" style="margin-top: 3em"><small>Already have a TrueNTH account?
+                <a href="/user/sign-in">
+                Login in now...</a></small></p>
+
         </div>
+        <div class="col-md-7">
 
-        {% if user_manager.enable_email and user_manager.enable_username %}
-        {{ render_field(form.email, tabindex=220) }}
-        {% endif %}
+            <p>Register using:</p>
 
-        {{ render_field(form.password, tabindex=230) }}
+            <div style="margin-left: 1em">
+                    <a href="{{ url_for('auth.login', provider_name='facebook') }}"
+                       class="btn btn-social btn-facebook">
+                        <i class="fa fa-facebook"></i>
+                        Facebook
+                    </a> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                    <a href="{{ url_for('auth.login', provider_name='google') }}"
+                       class="btn btn-social btn-google">
+                        <i class="fa fa-google"></i>
+                        Google
+                    </a>
+                </div>
 
-        {% if user_manager.enable_retype_password %}
-        {{ render_field(form.retype_password, tabindex=240) }}
-        {% endif %}
+            <p style="margin-top: 2em">Or create a TrueNTH account:</p>
+            <form action="" method="POST" novalidate formnovalidate class="form" role="form" style="margin-left: 1em">
+                {{ form.hidden_tag() }}
 
-        {{ render_submit_field(form.submit, tabindex=280) }}
-    </form>
+                {# Username or Email #}
+                {% set field = form.username if user_manager.enable_username else form.email %}
+                {{ render_field(form.username, tabindex=220) }}
+
+
+                {% if user_manager.enable_email and user_manager.enable_username %}
+                {{ render_field(form.email, tabindex=220) }}
+                {% endif %}
+
+                {{ render_field(form.password, tabindex=230) }}
+
+                {% if user_manager.enable_retype_password %}
+                {{ render_field(form.retype_password, tabindex=240) }}
+                {% endif %}
+
+                {{ render_submit_field(form.submit, "Register", tabindex=280) }}
+            </form>
+
+            <p class="hidden-md hidden-lg" style="margin-top: 2em"><small>Already have a TrueNTH account?
+                <a href="/user/sign-in">
+                    Login in now...</a></small></p>
+
+        </div>
+    </div>
+
+
+
+
 
 </div>
 
