--- a/portal/templates/invite.html
+++ b/portal/templates/invite.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block main %}
 
-<div class="well">
+<div class="portal-well well">
 
     <h3 class="tnth-headline">Email Invite</h3>
     <p>Send a TrueNTH email invite by filling in the form below.</p>
