--- a/portal/templates/admin.html
+++ b/portal/templates/admin.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block main %}
 
-<div class="well">
+<div class="portal-well well">
     <h3 class="tnth-headline">User Administration</h3>
 
     <p id="profileIntro">Select any user to view details or make changes.</p>
