--- a/portal/templates/client_edit.html
+++ b/portal/templates/client_edit.html
@@ -2,7 +2,7 @@
 {% block main %}
 {% from "flask_user/_macros.html" import render_field, back_btn %}
 
-<div class="well">
+<div class="portal-well well">
 
     {{ back_btn('clients','Client Applications') }}
 
