--- a/portal/templates/flask_user/forgot_password.html
+++ b/portal/templates/flask_user/forgot_password.html
@@ -3,9 +3,9 @@
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_submit_field, back_btn %}
 
-<div class="well">
+<div class="portal-well well">
 
-    {{ back_btn('/user/sign-in','Sign In') }}
+    {{ back_btn('user/sign-in','Sign In') }}
 
     <h2>{%trans%}Forgot Password{%endtrans%}</h2>
     <br />
