--- a/portal/templates/invite_sent.html
+++ b/portal/templates/invite_sent.html
@@ -2,7 +2,7 @@
 {% block main %}
 {% from "flask_user/_macros.html" import back_btn %}
 
-<div class="well">
+<div class="portal-well well">
 
     {{ back_btn('invite','Email Invite') }}
 
@@ -13,7 +13,7 @@
     </div>
     <div class="form-group">
         <label for="sent_on">Sent</label>
-        <input type="text" class="form-control" name="subject" id="subject" size='79' value="{{ message.sent_at.strftime('%m/%d/%Y %H:%M:%S') }}" readonly>
+        <input type="text" class="form-control" name="subject" id="sent_on" size='79' value="{{ message.sent_at.strftime('%m/%d/%Y %H:%M:%S') }}" readonly>
     </div>
     <div class="form-group">
         <label for="subject">Subject</label>
