--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -77,9 +77,6 @@ a:hover, a:active {
     font-weight: bold;
     padding: 6px 24px;
   }
-  .feature-bottom {
-    margin-top: 5em;
-  }
 }
 .feature-bottom {
   position: absolute;
@@ -95,6 +92,7 @@ a:hover, a:active {
   overflow: auto;
   padding: 1em 0;
   line-height: 1.2;
+  display: none;
 }
 
 .portal-well {
