--- a/portal/static/less/portal.less
+++ b/portal/static/less/portal.less
@@ -87,7 +87,27 @@ a:hover, a:active {
   color: #fff;
   margin-bottom: 10px;
 }
-
+.band-box {
+  position: absolute;
+  top: 5%;
+  left: 0;
+  text-align: center;
+  width: 100%;
+  color: #fff;
+  padding: 0 0.5em;
+  .headline {
+    font-size: 20px;
+    line-height: 1.1;
+  }
+}
+.portal-box {
+  margin: 0 -20px;
+  background-color: #83887c;
+  padding: 1em;
+  h4 {
+    color: #c8c5b6;
+  }
+}
 #homeFooter {
   overflow: auto;
   padding: 1em 0;
@@ -111,25 +131,21 @@ a:hover, a:active {
   border-color: #33553d;
   transition: all 0.3s ease-in-out 0s;
   -webkit-transition: all 0.3s ease-in-out 0s;
-}
-.btn-tnth-primary:hover,
-.btn-tnth-primary:focus,
-.btn-tnth-primary.active,
-.open > .dropdown-toggle.btn-tnth-primary {
-  color: #fff;
-  background-color: #2a4531;
-  border-color: #1c2f21;
+  &:hover,
+  &:focus,
+  &.active,
+  .open > .dropdown-toggle& {
+    color: #fff;
+    background-color: #2a4531;
+    border-color: #1c2f21;
+  }
 }
 .btn-tnth-back {
   color: #777;
   margin: -1em 0 1em -6px;
 }
 
-.mo-text-seperator-vertical {
-  height: 100%;
-  margin: 0 2em;
-}
-.mo-text-seperator-horizontal, .mo-text-seperator-vertical {
+.separator-horizontal, .separator-vertical {
   position: relative;
   text-transform: uppercase;
   text-align: center;
@@ -137,57 +153,36 @@ a:hover, a:active {
   font-weight: bold;
   display: block;
   padding: 0;
+  &:before {
+    content: '';
+    display: block;
+    position: absolute;
+    border-style: solid;
+    border-color: #C4C6C7;
+  }
+  > span {
+    background: #FFF;
+    display: inline-block;
+  }
 }
-.mo-text-seperator-vertical:before {
-  left: 50%;
-  margin-left: -1px;
+.separator-vertical {
   height: 100%;
-  border-width: 0 0 0 1px;
-}
-.mo-text-seperator-horizontal:before, .mo-text-seperator-vertical:before {
-  content: '';
-  display: block;
-  position: absolute;
-  border-style: solid;
-  border-color: #C4C6C7;
-}
-.mo-text-seperator-vertical > span {
-  height: 3em;
-  line-height: 3em;
-  width: 4em;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  margin-top: -1.5em;
-  margin-left: -2em;
-}
-.mo-text-seperator-horizontal > span, .mo-text-seperator-vertical > span {
-  background: #FFF;
-  display: inline-block;
-}
-
-/** Responsive sizes **/
-@media (max-width: 480px) {
-  .feature-box {
-    top: 4%;
-    .logo img {
-      width: 120px;
-      margin-bottom: 60px;
-    }
+  margin: 0 2em;
+  &:before {
+    left: 50%;
+    margin-left: -1px;
+    height: 100%;
+    border-width: 0 0 0 1px;
   }
-  .feature-bottom {
-    position: inherit;
-    padding: 10px 0;
-    background-color: #000;
-    .feature-btn-secondary {
-      &:hover, &:active {
-        color: #000;
-        background-color: #fff;
-      }
-    }
-  }
-  #footerLockup {
-    max-height: 80px;
+  > span {
+    height: 3em;
+    line-height: 3em;
+    width: 4em;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -1.5em;
+    margin-left: -2em;
   }
 }
 
@@ -216,7 +211,31 @@ a:hover, a:active {
   opacity: 0.4;
 }
 
+
 /** Responsive sizes **/
+@media (max-width: 480px) {
+  .feature-box {
+    top: 4%;
+    .logo img {
+      width: 120px;
+      margin-bottom: 60px;
+    }
+  }
+  .feature-bottom {
+    position: inherit;
+    padding: 10px 0;
+    background-color: #000;
+    .feature-btn-secondary {
+      &:hover, &:active {
+        color: #000;
+        background-color: #fff;
+      }
+    }
+  }
+  #footerLockup {
+    max-height: 80px;
+  }
+}
 @media (max-width: 380px) {
   .feature-box {
     .logo img {
@@ -245,6 +264,13 @@ a:hover, a:active {
       font-size: 18px;
       font-weight: bold;
       padding: 6px 24px;
+    }
+  }
+  .band-box {
+    top: 45%;
+    padding: 0 1em;
+    .headline {
+      font-size: 32px;
     }
   }
   .feature-btn-secondary {
