--- a/portal/templates/flask_user/login_or_register.html
+++ b/portal/templates/flask_user/login_or_register.html
@@ -3,6 +3,124 @@
 {% block content %}
 {% from "flask_user/_macros.html" import render_field, render_checkbox_field, render_submit_field %}
 
+<div class="well portal-well">
+
+    <div class="row">
+
+        <div class="col-sm-5">
+            <h4>Register for TrueNTH</h4>
+
+            <p>Do you have a Google or Facebook account? You can register with either of those or create a TrueNTH username and password. <i class="fa fa-question-circle"></i> </p>
+
+            <div class="row" style="margin-top: 2em">
+                <div class="col-xs-6 text-center">
+                    <a href="{{ url_for('auth.login', provider_name='facebook') }}"
+                       class="btn btn-social btn-sm btn-facebook">
+                        <i class="fa fa-facebook"></i>
+                        Facebook
+                    </a>
+                </div>
+                <div class="col-xs-6 text-center">
+                    <a href="{{ url_for('auth.login', provider_name='google') }}"
+                       class="btn btn-sm btn-social btn-google">
+                        <i class="fa fa-google"></i>
+                        Google
+                    </a>
+                </div>
+            </div>
+            <p style="margin-top: 2em">Create a TrueNTH account:</p>
+            <form action="" method="POST" novalidate formnovalidate class="form" role="form">
+                {{ form.hidden_tag() }}
+
+                {# Username or Email #}
+                {% set field = form.username if user_manager.enable_username else form.email %}
+                {{ render_field(form.username, tabindex=220) }}
+
+
+                {% if user_manager.enable_email and user_manager.enable_username %}
+                {{ render_field(form.email, tabindex=220) }}
+                {% endif %}
+
+                {{ render_field(form.password, tabindex=230) }}
+
+                {% if user_manager.enable_retype_password %}
+                {#
+                {{ render_field(form.retype_password, tabindex=240) }}
+                #}
+                {% endif %}
+
+                {{ render_submit_field(form.submit, "Register", tabindex=280) }}
+            </form>
+
+        </div>
+        <div class="col-sm-2 hidden-xs">
+
+            <div style="height:300px; margin-top: 2em;">
+                <div class="separator-vertical"><span>Or</span></div>
+            </div>
+
+        </div>
+        <div class="col-sm-5">
+            <h4>Sign In</h4>
+
+            <p>If you already signed up for TrueNTH, welcome back!</p>
+
+            <p style="margin-top: 2em">Log in with:</p>
+
+            <div style="margin: 1em 0 1em 1em">
+                <a href="{{ url_for('auth.login', provider_name='facebook') }}"
+                   class="btn btn-social btn-facebook">
+                    <i class="fa fa-facebook"></i> Facebook
+                </a><br /><br />
+                <a href="{{ url_for('auth.login', provider_name='google') }}"
+                   class="btn btn-social btn-google">
+                    <i class="fa fa-google"></i> Google
+                </a><br />
+            </div>
+
+            <p>Or a TrueNTH account:</p>
+
+            <form action="" method="POST" class="form" role="form" style="margin-left: 1em">
+                {{ form.hidden_tag() }}
+
+                {# Username or Email field #}
+                {% set field = form.username if user_manager.enable_username else form.email %}
+                {{ render_field(form.username, label="Username or email address", label_visible=false, tabindex=10) }}
+
+                {# Password field #}
+                {% set field = form.password %}
+                {{ render_field(form.password, label="Password", label_visible=false, tabindex=20) }}
+
+                <div class="row">
+                    <div class="col-xs-6">
+                        {# Remember me #}
+                        {% if user_manager.enable_remember_me %}
+                        {{ render_checkbox_field(login_form.remember_me, tabindex=130) }}
+                        {% endif %}
+                    </div>
+                    {% if user_manager.enable_forgot_password %}
+                    <div class="col-xs-6">
+                        <a href="{{ url_for('user.forgot_password') }}" style="margin-top: 10px" class="pull-right">
+                            {%trans%}Forgot your Password?{%endtrans%}</a>
+                    </div>
+                    {% endif %}
+                </div>
+
+                {# Submit button #}
+                {{ render_submit_field(form.submit, tabindex=180) }}
+            </form>
+
+
+        </div>
+
+    </div>
+
+
+    </div>
+
+
+</div>
+
 <div class="row">
 <div class="col-sm-6">
 
