--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -176,6 +176,11 @@
                     </div>
                     <div class="checkbox">
                         <label>
+                            <input type="checkbox" value="partner"> Partner
+                        </label>
+                    </div>
+                    <div class="checkbox">
+                        <label>
                             <input type="checkbox" value="patient"> Patient
                         </label>
                     </div>
